tests/transpiler/x/ocaml/for_loop.ml
(* Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:38 +0700 *)

let () =
  (try for i = 1 to (4 - 1) do
    try
  print_endline (String.concat " " (List.filter (fun s -> s <> "") [string_of_int i]));
    with Continue -> ()
  done with Break -> ())
